fix bug in github actions

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,4 +1,4 @@
-name CI Checks
+name: CI Checks
 
 on:
     push:
@@ -10,8 +10,8 @@ jobs:
         runs-on: ubuntu-latest
         steps:
 
-        - name: Set up Go 1.20
-          use: actions/setup-go@v2
+        - name: Set up Go 1.x
+          uses: actions/setup-go@v2
           with:
             go-version: ^1.20
 
