--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,7 +5,22 @@ on:
         branches:
             - main
 jobs:
-    build:
+  test:
+    name: Test Application
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v4
+        with:
+          go-version: ^1.20
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v3
+      - name: Downloads
+        run: go get -t ./...
+      - name: Run Test
+        run: go test ./...
+
+  build:
         name: Build App
         runs-on: ubuntu-latest
         steps:
