--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -15,6 +15,23 @@ jobs:
           go-version: ^1.20
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
+      - name: Run Test
+        run: make test
+      - name: Coverage Check
+        run: make coverage
+      - name: Generate Report
+        run: make report
+      - name: Copy Files
+        run: |
+            mkdir reports
+            cp cover.xhtml reports/.
+      
+      - name: Archive
+        uses: actions/upload-artifact@v2
+        with:
+          name: reports
+          path: reports
+
       - name: Downloads
         run: go get -t ./...
       - name: Run Test
